Related: fdo#42656 implement RTF export of fillType shape property